--- a/style.css
+++ b/style.css
@@ -184,6 +184,27 @@ input.display{
     cursor: pointer;
 }
 
+.refresh{
+    margin: 0.45rem;
+    width: 50%;
+    padding: 1rem 0;
+    background-color: var(--vb-violet);
+    text-align: center;
+    border-radius: 0.75rem;
+    border-bottom: 0.35rem solid var(--vb-yellow);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: var(--vb-yellow);
+    font-weight: 600;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+.ref{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .check{
     display: flex;
     align-items: center;
